# ms-tpm-20-ref

TPMCmd/: CMakeLists.txt
TPMCmd/Platform/: CMakeLists.txt
TPMCmd/Platform/src/: CMakeLists.txt  Clock.c
TPMCmd/Simulator/: CMakeLists.txt
TPMCmd/Simulator/src/: CMakeLists.txt
TPMCmd/tpm/: CMakeLists.txt
TPMCmd/tpm/src/: CMakeLists.txt
TPMCmd/tpm/src/command/: CMakeLists.txt
TPMCmd/tpm/src/command/Asymmetric/: CMakeLists.txt
TPMCmd/tpm/src/command/AttachedComponent/: CMakeLists.txt
TPMCmd/tpm/src/command/Attestation/: CMakeLists.txt
TPMCmd/tpm/src/command/Capability/: CMakeLists.txt
TPMCmd/tpm/src/command/ClockTimer/: CMakeLists.txt
TPMCmd/tpm/src/command/CommandAudit/: CMakeLists.txt
TPMCmd/tpm/src/command/Context/: CMakeLists.txt
TPMCmd/tpm/src/command/DA/: CMakeLists.txt
TPMCmd/tpm/src/command/Duplication/: CMakeLists.txt
TPMCmd/tpm/src/command/EA/: CMakeLists.txt
TPMCmd/tpm/src/command/Ecdaa/: CMakeLists.txt
TPMCmd/tpm/src/command/FieldUpgrade/: CMakeLists.txt
TPMCmd/tpm/src/command/HashHMAC/: CMakeLists.txt
TPMCmd/tpm/src/command/Hierarchy/: CMakeLists.txt
TPMCmd/tpm/src/command/Misc/: CMakeLists.txt
TPMCmd/tpm/src/command/NVStorage/: CMakeLists.txt
TPMCmd/tpm/src/command/Object/: CMakeLists.txt
TPMCmd/tpm/src/command/PCR/: CMakeLists.txt
TPMCmd/tpm/src/command/Random/: CMakeLists.txt
TPMCmd/tpm/src/command/Session/: CMakeLists.txt
TPMCmd/tpm/src/command/Signature/: CMakeLists.txt
TPMCmd/tpm/src/command/Startup/: CMakeLists.txt
TPMCmd/tpm/src/command/Symmetric/: CMakeLists.txt
TPMCmd/tpm/src/command/Testing/: CMakeLists.txt
TPMCmd/tpm/src/crypt/: CMakeLists.txt  CryptEccData.c
TPMCmd/tpm/src/crypt/ossl/: CMakeLists.txt
TPMCmd/tpm/src/events/: CMakeLists.txt
TPMCmd/tpm/src/main/: CMakeLists.txt
TPMCmd/tpm/src/subsystem/: CMakeLists.txt
TPMCmd/tpm/src/support/: CMakeLists.txt
