add_subdirectory(Asymmetric)
add_subdirectory(AttachedComponent)
add_subdirectory(Attestation)
add_subdirectory(Capability)
add_subdirectory(ClockTimer)
add_subdirectory(CommandAudit)
add_subdirectory(Context)
add_subdirectory(DA)
add_subdirectory(Duplication)
add_subdirectory(EA)
add_subdirectory(Ecdaa)
add_subdirectory(FieldUpgrade)
add_subdirectory(HashHMAC)
add_subdirectory(Hierarchy)
add_subdirectory(Misc)
add_subdirectory(NVStorage)
add_subdirectory(Object)
add_subdirectory(PCR)
add_subdirectory(Random)
add_subdirectory(Session)
add_subdirectory(Signature)
add_subdirectory(Startup)
add_subdirectory(Symmetric)
add_subdirectory(Testing)
add_subdirectory(Vendor)
